K8s -manifest/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 5001
      targetPort: 5001
      nodePort: 30000
